2002-10-22  Sam Steingold  <sds@gnu.org>

	* complete.lisp (completion): call DESCRIBE only if there was
	something typed and it is in the completions

2002-10-22  Sam Steingold  <sds@gnu.org>

	Make sure COMPILE-FILE-PATHNAME does not barf in SEARCH-FILE
	* init.lisp (search-file): pass :IF-DOES-NOT-EXIST :IGNORE to DIRECTORY
	* pathname.d (dir_search_if_none_t): added DIR_IF_NONE_IGNORE
	(directory_search_hashcode): never signal error, just return nullobj
	(directory_search_scandir): do not barf when DIR_IF_NONE_IGNORE,
	otherwise treat DIR_IF_NONE_IGNORE just like DIR_IF_NONE_DISCARD
	(directory_search): be more careful with subdirectories when
	DIR_IF_NONE_IGNORE
	(DIRECTORY): accept :IF-DOES-NOT-EXIST :IGNORE
	* constobj.d (type_directory_not_exist): added :IGNORE

2002-10-18  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-LABELS, c-GENERIC-LABELS): new macro ADD-FENV
	in their common MACROLET

2002-10-17  Sam Steingold  <sds@gnu.org>

	* debug.d (read_form): do not nreverse STACK_2 before binding
	SYS::*KEY-BINDINGS*, since this destructively modifies commandsr
	in reploop.lisp
	* reploop.lisp (help): avoid much consing by not calling REVERSE +
	REMOVE-IF-NOT, this also simplifies the logic everywhere and makes
	the help message appear in the same order for different invocations
	(break-loop): push the restart announcement onto commandsr
	(break-loop, step-hook-fn): compute the command list just once,
	instead of for each READ-EVAL-PRINT invocation

2002-10-16  Sam Steingold  <sds@gnu.org>

	* complete.lisp (completion): respect (readtable-case *readtable*)
	when printing and searching completions; do not close the
	parenthesis when quoting since readline will add a close quote
	after the closing parenthesis

2002-10-16  Sam Steingold  <sds@gnu.org>

	* realtran.d (F_pi_round_I_F): removed
	(F_pi2_round_I_F): the second (integer) value is taken mod 4
	(cos_stack, sin_stack): new functions
	(R_sin_R, R_cos_R): rewrote to use them
