@@ -1,3 +1,11 @@
+2002-10-23  Arseny Slobodjuck <ampy@ich.dvo.ru>
+
+	Bugfixing directory shortcuts on win32.
+	* pathname.d (assure_dir_exists) [WIN32_NATIVE]: 
+	handle situation when dir is exist but filename is not.
+	(directory_search_scandir) [WIN32_NATIVE]: return symbolic
+	name on nonexisting targets.
+
 2002-10-22  Sam Steingold  <sds@gnu.org>
 
 	* complete.lisp (completion): call DESCRIBE only if there was
